[metadata]
name = pgdumpreport
version = attr: pgdumpreport.version
description = A PostgreSQL dump reporting tool
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = BSD 3-Clause License
license-file = LICENSE
home-page = https://github.com/gmr/pgdumpreport
project_urls =
    Bug Tracker = https://github.com/gmr/pgdumpreport/issues
    Documentation =https://github.com/gmr/pgdumpreport/
    Source Code = https://github.com/gmr/pgdumpreport/
author = Gavin M. Roy
author_email = gavinmroy@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: SQL
    Topic :: Database
    Topic :: System :: Systems Administration
    Topic :: Software Development
requires-dist = setuptools
keywords =
    postgresql
    ddl
    sql
    schema

[options]
include_package_data = True
install_requires =
    pgdumplib>=3,<4
packages = pgdumpreport
zip_safe = false

[options.entry_points]
console_scripts =
    pgdumpreport = pgdumpreport.cli:main

[options.extras_require]
test =
    coverage
    flake8
    flake8-comprehensions
    flake8-deprecated
    flake8-import-order
    flake8-print
    flake8-quotes
    flake8-rst-docstrings
    flake8-tuple
    nose

[coverage:run]
branch = True
data_file = build/.coverage

[flake8]
application-import-names = pgdumpreport
exclude =  build,env
import-order-style = google

[nosetests]
cover-branches = 1
cover-html = true
cover-html-dir = build/coverage
cover-package = pgdumpreport
cover-xml = true
cover-xml-file = build/coverage.xml
logging-level = DEBUG
verbosity = 2
with-coverage = 1
with-xunit = true
xunit-file = build/nosetests.xml
